<resources>
    <string name="app_name">Time Tracker</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_photo">Сделать фото</string>
    <string name="nav_records">Отметки времени</string>
    <string name="nav_group_info">Информация</string>
    <string name="nav_about">Очистить БД</string>
    <string name="categories">Категории</string>
    <string name="records">Отметки потерянного времени</string>
    <string name="delete_record">Удалить запись</string>
    <string name="refresh_record">Обновить запись</string>
    <string name="category">"Категория: "</string>
    <string name="description">"Описание: "</string>
    <string name="start_time">"Время начала: "</string>
    <string name="end_time">"Время окончания: "</string>
    <string name="interval">"Интервал: "</string>
    <string name="photo">"Фото: "</string>
    <string name="choose_time">Выберите время</string>
    <string name="incorrect_time">Время окончания раньше времени начала</string>
    <string name="category_title">Название</string>
    <string name="add_btn">Добавить</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="button_ok">Ок</string>
    <string name="month_stats">Месяц</string>
    <string name="free_stats">Произвольно</string>
    <string name="all_time_stats">Все время</string>
    <string name="interval_stats">Самые частые занятия</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата окончания</string>
    <string name="add">Добавить</string>
    <string name="btn_add">Добавить</string>
    <string name="button_cancel">Отмена</string>
    <string name="confirm_deletion">Подтвердите удаление</string>
    <string name="confirm_deletion_msg">Вы уверены, что хотите удалить отметку?</string>
    <string name="time_tracker_app">Отметки времени</string>
    <string name="often_categories">Самые частые занятия</string>
    <string name="summary_categories_time">Суммарное время по категориям</string>
    <string name="pie_title">Круговая диаграмма</string>
</resources>
