<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_watch_later_black"
            android:title="@string/nav_records" />
        <item
            android:id="@+id/nav_make_photo"
            android:icon="@drawable/ic_add_a_photo_black"
            android:title="@string/nav_photo" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_show_chart_black"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
    </group>

</menu>
