<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/cat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/category"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/add_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:paddingBottom="20dp" />

                <LinearLayout
                    android:id="@+id/startDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/priorityLayout"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startDateTimeLabel"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/startDate"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onChooseStartDate" />

                    <TextView
                        android:id="@+id/startTime"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onChooseStartTime" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/endDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/startDatePicker"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/endDateTimeLabel"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/end_date" />

                    <TextView
                        android:id="@+id/endDate"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onChooseEndDate" />

                    <TextView
                        android:id="@+id/endTime"
                        style="@style/DateTimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onChooseEndTime" />

                </LinearLayout>

                <TextView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/photo"
                    android:textSize="18sp" />

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:columnWidth="100dp"
                    android:drawSelectorOnTop="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" />

                <Spinner
                    android:id="@+id/photoSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/select_photos"></Spinner>

                <Button
                    android:id="@+id/add_record_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="50dp"
                    android:text="@string/btn_add" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
